--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
 </head>
 
 <body>
-    <main>
-        <header>
-            <nav>
-
-            </nav>
-        </header>
-        <h1 class="titulo">Consulta de API de Rick and Morty</h1>
-        <div id="personajes-container"></div>
-
-    </main>
+    <body>
+        <h1 class="titulo">Personajes De Rick & Morty</h1>
+        <section id="personajes-container" class="container">
+        <!-- Aquí se agregarán los personajes -->
+        </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
 </body>
