Agregando mas contenido  se creacta section de los episodios

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <section id="personajes-container" class="container">
         <!-- Aquí se agregarán los personajes -->
         </section>
+
+        <h1 class="titulo">Los episodio</h1>
+        <section id="episodios" class="episodios">
+        <!-- Aquí se agregarán los personajes -->
+
+        </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
 </body>
